config/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-services-miloapis-com-v1alpha1-service
  failurePolicy: Fail
  name: mservice.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-services-miloapis-com-v1alpha1-serviceactivationrequest
  failurePolicy: Fail
  name: mserviceactivationrequest.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - serviceactivationrequests
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-services-miloapis-com-v1alpha1-service
  failurePolicy: Fail
  name: vservice.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - services
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-services-miloapis-com-v1alpha1-serviceactivationrequest
  failurePolicy: Fail
  name: vserviceactivationrequest.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - serviceactivationrequests
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-services-miloapis-com-v1alpha1-serviceavailability
  failurePolicy: Fail
  name: vserviceavailability.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - serviceavailabilities
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-services-miloapis-com-v1alpha1-serviceconfiguration
  failurePolicy: Fail
  name: vserviceconfiguration.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - serviceconfigurations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-services-miloapis-com-v1alpha1-serviceconsumer
  failurePolicy: Fail
  name: vserviceconsumer.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - serviceconsumers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-services-miloapis-com-v1alpha1-serviceentitlement
  failurePolicy: Fail
  name: vserviceentitlement.kb.io
  rules:
  - apiGroups:
    - services.miloapis.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - serviceentitlements
  sideEffects: None
